correccion1 en login

--- a/vista_login.html
+++ b/vista_login.html
@@ -25,7 +25,7 @@
                 <label for="password">Contraseña</label>
             </div>
             <div class="input-field col s12">
-                <a href= "<?= ScriptApp.getService().getUrl()?>?v=form" target="_top" class="waves-effect waves-light btn">Iniciar Sesion</a>
+                <button class="waves-effect waves-light btn" onclick="enviarCredenciales()">Iniciar sesions</button>
             </div>
         </div>
 
