--- a/vista_login.html
+++ b/vista_login.html
@@ -13,23 +13,29 @@
 <body>
     <?!= include("vista_navbar"); ?>
     <h1> inserta los datos de lel usuario</h1>
-    <h1> <?= tittle ?> </h1>
+    <h1>
+        <?= tittle ?>
+    </h1>
     <div class="container">
-        <div class="col s12">
-            <div class="input-field col s12">
-                <input id="usuario" type="text" class="validate">
-                <label for="usuario">Usuario</label>
+        <form>
+            <div class="col s12">
+                <div class="input-field col s12">
+                    <input id="usuario" type="text" class="validate">
+                    <label for="usuario">Usuario</label>
+                </div>
+                <div class="input-field col s12">
+                    <input id="password" type="password" class="validate">
+                    <label for="password">Contraseña</label>
+                </div>
+                <div class="input-field col s12">
+                    <button class="waves-effect waves-light btn" onclick="enviarCredenciales()">Iniciar sesions</button>
+                </div>
             </div>
-            <div class="input-field col s12">
-                <input id="password" type="password" class="validate">
-                <label for="password">Contraseña</label>
-            </div>
-            <div class="input-field col s12">
-                <button class="waves-effect waves-light btn" onclick="enviarCredenciales()">Iniciar sesions</button>
-            </div>
-        </div>
+        </form>
 
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <?!= include("script_login"); ?>
 </body>
+
 </html>
